<resources>
    <string name="app_name">NavTest</string>
    <string name="facebook_application_id" translatable="false">528820187855933</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb528820187855933</string>

    <string name="google_news_api_key" translatable="false">354b31c8e11e42f18f435fe82c5faf9c</string>


    <!-- Bottom Navigation Menu -->
    <string name="menu_home">Home</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>

    <!-- Login -->
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="login_name_hint">Name</string>
    <string name="login_login_with_email_button">Login with email</string>
    <string name="login_login_with_google_button">Login with Google</string>
    <string name="login_login_with_facebook_button">Login with Facebook</string>
    <string name="login_sign_in_button">Sign in</string>
    <string name="login_authenticate_button">Authenticate</string>
    <string name="login_next_button">Next</string>
    <string name="login_do_not_have_account_button">Don\'t have account? Sign up</string>
    <string name="login_already_have_account_button">Already have account? Sign in</string>
    <string name="login_sign_in_password_welcome_back_title">Welcome back!</string>
    <string name="login_sign_in_password_welcome_back_message">You\'ve already used &lt;b&gt;%1$s&lt;/b&gt; to sign in.
        Enter your password for that account.
    </string>
    <string name="login_forgot_password_details_text">Get instructions sent to this email that explain how to
        reset your password.
    </string>
    <string name="login_forgot_password_check_your_email_message">Please, check your email</string>
    <string name="login_forgot_password_button">Forgot password?</string>
    <string name="login_reset_password_title">Reset password</string>
    <string name="login_reset_password_button">Send</string>
    <string name="login_create_password_button">Create</string>
    <string name="login_update_password_button">Update</string>
    <string name="login_policy_privacy_button">Policy Privacy</string>
    <string name="login_policy_privacy_link">"https://wsenafranca.github.io/NavTest/docs/privacy_policy/"</string>
    <string name="login_sign_up_button">Sign up</string>
    <string name="login_loading_indicator">Connecting…</string>

    <!-- Home -->
    <string name="home_welcome_message">Welcome, %1$s!</string>
    <string name="home_welcome_back_message">Welcome back, %1$s!</string>

    <!-- News -->
    <string-array name="news_category">
        <item>News</item>
        <item>Business</item>
        <item>Entertainment</item>
        <item>Health</item>
        <item>Science</item>
        <item>Sports</item>
        <item>Technology</item>
    </string-array>
    <string name="news_menu_refresh">Refresh</string>
    <string name="news_menu_search">Search</string>
    <string name="news_results_title">Results</string>
    <string name="news_results_empty_list">Results not found</string>

    <!-- Notifications -->
    <string-array name="notifications_type">
        <item>Notification</item>
        <item>Event</item>
    </string-array>
    <string name="notifications_status_read">Read</string>
    <string name="notifications_status_unread">Unread</string>
    <string name="notifications_undo_message">Notification deleted</string>
    <string name="notifications_undo_action">Undo</string>

    <!-- Settings -->
    <string name="settings_preference_general_category_title">General</string>
    <string name="settings_preference_account_title">Account</string>
    <string name="settings_preference_account_change_password_title">Password</string>
    <string name="settings_preference_account_link_google_title">Google</string>
    <string name="settings_preference_account_link_facebook_title">Facebook</string>
    <string name="settings_preference_account_link_state_connected">Connected</string>
    <string name="settings_preference_account_link_state_disconnected">Disconnected</string>
    <string name="settings_preference_account_link_state_enabled">Change Password</string>
    <string name="settings_preference_account_link_state_disabled">Define Password</string>
    <string name="settings_preference_account_delete_title">Delete</string>
    <string name="settings_preference_account_delete_summary">Your data will be lost.</string>
    <string name="settings_preference_dark_theme_title">Dark theme</string>
    <string name="settings_preference_locale_title">Language</string>
    <string name="settings_preference_notifications_category_title">Notifications</string>
    <string name="settings_preference_notifications_enable_notifications_title">Show notifications</string>
    <string name="settings_preference_notifications_ringtone_title">Sound</string>
    <string name="settings_preference_notifications_ringtone_dialog_title">Select a ringtone</string>

</resources>
