<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".fragment.login.ForgotPasswordFragment"
        android:background="@color/colorPrimaryDark"
        android:theme="@style/AppTheme.Login"
        android:layout_marginTop="20dp">
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">
        <LinearLayout
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_marginTop="8dp"
                android:layout_marginStart="48dp"
                android:layout_marginEnd="48dp"
                android:layout_marginBottom="8dp">
            <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/ic_help"
                    app:tint="#fff"
                    tools:ignore="ContentDescription"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:text="@string/login_forgot_password_button"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textStyle="bold"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/login_forgot_password_details_text"/>
            <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:hint="@string/login_email_hint"
                    app:startIconDrawable="@drawable/ic_email">
                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:inputType="textEmailAddress"
                        android:imeOptions="actionNext"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.button.MaterialButton
                    android:id="@+id/reset_password_button"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/login_reset_password_button"
                    android:textColor="@color/colorPrimaryDark"
                    app:cornerRadius="16dp"/>
        </LinearLayout>
    </ScrollView>
    <include layout="@layout/appbar_transparent" android:id="@+id/appbar"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>