<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable name="userViewModel" type="washington.franca.com.navtest.viewmodel.UserViewModel"/>
    </data>
    <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".fragment.login.SignInPasswordFragment">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:orientation="vertical"
                app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
            <LinearLayout
                    android:id="@+id/welcome_back_message_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="8dp">
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/login_sign_in_password_welcome_back_title"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"/>
                <TextView
                        android:id="@+id/welcome_back_message_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/login_sign_in_password_welcome_back_message"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
            </LinearLayout>
            <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.Design.TextInputLayout"
                    android:id="@+id/password_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    app:passwordToggleEnabled="true"
                    android:hint="@string/login_password_hint">
                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:imeOptions="actionDone"/>
            </com.google.android.material.textfield.TextInputLayout>
            <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <com.google.android.material.button.MaterialButton
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:id="@+id/forgot_password_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|center_vertical"
                        android:textAllCaps="false"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:text="@string/login_forgot_password_button"/>
                <com.google.android.material.button.MaterialButton
                        android:id="@+id/sign_in_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end|center_vertical"
                        android:text="@string/login_sign_in_button"
                        android:textColor="#fff"/>
            </FrameLayout>
        </LinearLayout>
        <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/appbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/AppTheme.AppBarOverlay"
                android:background="?attr/colorSurface"
                tools:context=".fragment.BaseFragment">
            <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_marginTop="24dp"
                    app:popupTheme="@style/AppTheme.PopupOverlay"/>
            <ProgressBar
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:id="@+id/progress_bar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-7dp"
                    android:layout_marginBottom="-7dp"/>
        </com.google.android.material.appbar.AppBarLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>