<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".fragment.login.LoginFragment"
        android:background="@color/colorPrimaryDark"
        android:theme="@style/AppTheme.Login"
        android:paddingTop="20dp">
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">
        <LinearLayout
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="48dp"
                android:layout_marginEnd="48dp"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:orientation="vertical">
            <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/ic_launcher_foreground"
                    app:tint="#fff"
                    tools:ignore="ContentDescription"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:text="@string/app_name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textStyle="bold"/>
            <com.google.android.material.button.MaterialButton
                    android:id="@+id/sign_in_button"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:layout_marginBottom="8dp"
                    app:icon="@drawable/ic_sign_in"
                    app:iconGravity="start"
                    android:text="@string/login_sign_in_button"
                    app:iconTint="@color/colorPrimaryDark"
                    app:iconSize="24dp"
                    android:textColor="@color/colorPrimaryDark"
                    app:cornerRadius="16dp"/>
            <com.google.android.material.button.MaterialButton
                    style="@style/Widget.MaterialComponents.Button.Icon"
                    android:id="@+id/sign_in_with_google_button"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/login_login_button"
                    app:backgroundTint="#fff"
                    app:icon="@drawable/googleg_standard_color_18"
                    app:iconSize="24dp"
                    app:iconTint="@null"
                    app:iconGravity="start"
                    android:textColor="@color/common_google_signin_btn_text_light"
                    app:cornerRadius="16dp"/>
            <com.google.android.material.button.MaterialButton
                    style="@style/Widget.MaterialComponents.Button.Icon"
                    android:id="@+id/sign_in_with_facebook_button"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/login_login_button"
                    app:backgroundTint="@color/com_facebook_button_background_color"
                    app:icon="@drawable/com_facebook_button_icon_white"
                    app:iconSize="24dp"
                    app:iconTint="@null"
                    app:iconGravity="start"
                    android:textColor="@color/com_facebook_button_text_color"
                    app:cornerRadius="16dp"/>
            <com.google.android.material.button.MaterialButton
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:id="@+id/sign_up_button"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/login_sign_up_button"
                    app:icon="@drawable/ic_sign_up"
                    app:iconGravity="start"
                    app:iconTint="#fff"
                    app:iconSize="24dp"
                    app:strokeColor="#fff"
                    app:cornerRadius="16dp"/>
            <com.google.android.material.button.MaterialButton
                    android:id="@+id/privacy_policy_button"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"
                    android:textAllCaps="false"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:text="@string/login_policy_privacy_button"/>
        </LinearLayout>
    </ScrollView>
    <include layout="@layout/appbar_transparent" android:id="@+id/appbar"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>